--- a/bilibili-lite/src/home/base.styl
+++ b/bilibili-lite/src/home/base.styl
@@ -151,6 +151,9 @@ manga-panel
 	background-color transparent !important
 	font-size 0
 
+	&::after
+		content none
+
 .exchange-btn .btn:hover
 .time-line .tl-link
 .time-line .tl-link:hover
