--- a/bilibili-lite/src/live/home.styl
+++ b/bilibili-lite/src/live/home.styl
@@ -47,6 +47,9 @@
 .player-ctnr button
 	background-color transparent !important
 
+	&::after
+		content none
+
 .notice-item .notice-btn
 	background-color var(--c-accent) !important
 	color var(--c-white) !important
