--- a/bilibili-lite/src/message/base.styl
+++ b/bilibili-lite/src/message/base.styl
@@ -81,6 +81,12 @@
 	background-color transparent !important
 	color var(--c-text) !important
 
+	&::after
+		content none
+
 .input-box .textarea
 	border 0 !important
 	background-color transparent !important
+
+.love-card .header::after
+	background-color var(--c-border) !important
