--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -15,6 +15,14 @@ em:not(.icon)
 .h .h-vipType
 .video-container .types
 .item .live-status.on
+.bangumi-item .right-info .headline .bangumi-label
+.filter-wrap .filter-item.active
+.im-notify
+.video-item.list .type
+.bangumi-item .left-img .bangumi-tag
+.bb-comment .stick
+.comment-bilibili-fold .stick
+  border 0
   background-color var(--c-accent) !important
   color var(--c-white) !important
 
@@ -64,6 +72,8 @@ textarea
 .video-toolbar .ops .share .share-pos
 .player-auxiliary-area .player-auxiliary-filter .player-auxiliary-setting-menu-wrap
 .hover-panel-wrap
+.suggest-wrap
+#article-list-index
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
