--- a/bilibili-lite/src/public/comment.styl
+++ b/bilibili-lite/src/public/comment.styl
@@ -71,6 +71,9 @@
 	background-color transparent !important
 	color var(--c-accent) !important
 
+	&::after
+		content none
+
 .bb-comment .comment-header .tabs-order li.on:after
 .comment-bilibili-fold .comment-header .tabs-order li.on:after
 	background-image none
