--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -38,6 +38,9 @@
 .international-header .nav-search .nav-search-btn
 	background-color transparent !important
 
+	&::after
+		content none
+
 /* 个人弹窗 */
 .van-popper-avatar .coins
 .van-popper-avatar .counts
@@ -210,6 +213,9 @@
 .nav-search-submit
 	background-color transparent !important
 	color var(--c-text) !important
+
+	&::after
+		content: none
 
 .bili-header-m .bilibili-suggest
 .dynamic-m .wnd_bottom a
