--- a/bilibili-lite/src/read/info.styl
+++ b/bilibili-lite/src/read/info.styl
@@ -5,17 +5,36 @@
 .draft-holder-block
 .author-container
 .bili-footer
+.up-info-holder .fixed-box .rightside-article-list-btn .icon-list
   display none !important
 
+.coin-wrap
+.bili-dialog-bomb .appeal-box
+  background-color var(--c-background)
+
 .up-info-holder .fixed-box .up-info-block .up-info-right-block .up-name
+#article-list-index .article-list-title
+.article-list-holder-block .article-list-plane .button#article-list-btn .label
+.article-list-holder-block .article-list-plane .button#article-list-btn .title
+.bili-dialog-bomb .appeal-box .wrap .container .question
   color var(--c-title) !important
 
 .up-info-holder .fixed-box .up-info-block .up-info-right-block .row-2
 .title-container .info span
+.article-list-holder-block .article-list-name
+.article-list-holder-block .article-list-plane .button.off .label
+.bili-dialog-bomb .appeal-box .wrap .container .textarea .memo
   color var(--c-text) !important
+
+.coin-wrap .coin-title i
+  color var(--c-accent) !important
 
 .article-action
 .tag-container .tag-item .tag-content
+.up-info-holder .fixed-box .rightside-article-list-btn .label
+.article-list-holder-block .article-list-plane .button#article-list-btn .label
+.article-list-holder-block .article-list-plane .button#article-list-btn .title
+.bili-dialog-bomb .appeal-box .wrap .container .options .option .checkbox
   border-color var(--c-border)
 
 .page-container
@@ -41,3 +60,31 @@
 .up-info-holder .fixed-box
 .up-info-holder.to-bottom .fixed-box
   position initial
+
+.up-info-holder .fixed-box .rightside-article-list-btn
+  width 310px
+  box-shadow none
+
+#article-list-index
+  box-shadow: none
+
+.article-holder .card
+  border-color var(--c-border)
+  background-color var(--c-hover)
+
+.article-list-holder-block .article-list-plane
+  display flex
+  justify-content space-between
+  border-color var(--c-border)
+
+.article-list-holder-block .article-list-plane .button
+  flex 1
+  width auto
+
+.article-list-holder-block .article-list-plane .button:hover
+  background-color var(--c-hover)
+
+.bili-dialog-bomb .appeal-box .header
+.bili-dialog-bomb .appeal-box .submit
+  border-color: var(--c-border)
+  background-color: var(--c-background)
