--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -31,7 +31,7 @@ button
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
-  overflow hidden
+  overflow hidden !important
   vertical-align top
 
   span
