--- a/bilibili-lite/src/public/none.styl
+++ b/bilibili-lite/src/public/none.styl
@@ -41,4 +41,6 @@
 .main-container .nav-tools .tool-item.mini
 .main-container .nav-tools a
 .main-container .pay-bar .vip .img-icon
+.bb-comment .reply-notice
+.comment-bilibili-fold .reply-notice
 	display none
