--- a/bilibili-lite/src/manga/home.styl
+++ b/bilibili-lite/src/manga/home.styl
@@ -1,31 +1,34 @@
 /* 漫画主页 */
 .multi-line-text::before
 .multi-line-text::after
-  display: none !important
+  display none !important
 
 .vertical-block-card
-  background-color: var(--c-background) !important
+.newbie-awarder .award-dialog .award-dialog-container
+  background-color var(--c-background) !important
 
 .section-title
 .item-title
 .manga-title
-  color: var(--c-title) !important
+.standby-panel .content-container .panel-title
+  color var(--c-title) !important
 
 .manga-card-vertical .text-info-section .supporting-text
 .schedule-item .text-section .status-text
 .meta-info p
-  color: var(--c-text) !important
+.standby-panel .content-container .support-text
+  color var(--c-text) !important
 
 .section-navigator
-  border-color: var(--c-border) !important
+  border-color var(--c-border) !important
 
 .section-navigator .section-item
   transition all 0.5s ease-in-out !important
 
 .section-navigator .section-item.current
 .section-navigator .section-item:hover
-  background-color: var(--c-accent) !important
-  color: var(--c-white) !important
+  background-color var(--c-accent) !important
+  color var(--c-white) !important
 
 .manga-navbar-history-list .action-button
 .manga-navbar-favourite-manga .action-button
@@ -35,7 +38,10 @@
 .schedule-list .list-header .date-selector .date-item
 .tab-item
 .newbie-awarder .close-button
-  background-color: transparent !important
+  background-color transparent !important
 
   &::after
-    content: none
+    content none !important
+
+.recommendation-section .manga-list
+  width 100% !important
