--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -106,7 +106,7 @@
 .out-container .container .video-tab .list-item .center-box .name-line .user-name
 	color var(--c-title) !important
 
-.list-item:hover
+.out-container .container .video-tab .list-item:hover
 	background-color var(--c-hover) !important
 
 .more-btn:hover
